fixed font size on mobile screen

--- a/_sass/custom/_cv.scss
+++ b/_sass/custom/_cv.scss
@@ -2,7 +2,7 @@
 
 .resume-wrapper {
   //background: #fff;
-  font-size: 15px;
+  font-size: 14px;
   line-height: 1.4;
   max-width: 950px;
   padding: 1em;
