--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -27,17 +27,17 @@ $h-size-6: 1em !default;
 @import "minimal-mistakes";
 
 html {
-    font-size: 12px; // change to whatever
+    font-size: 18px; 
   
     @include breakpoint($medium) {
-      font-size: 14px; // change to whatever
+      font-size: 18px; 
     }
   
     @include breakpoint($large) {
-      font-size: 16px; // change to whatever
+      font-size: 18px; 
     }
   
     @include breakpoint($x-large) {
-      font-size: 18px; // change to whatever
+      font-size: 18px; 
     }
   }
